# EchoesEngine

./: .env.example  .gitignore  AGENTS.md  BUILD_MISSION.md  CHECKPOINT_ECHOES_ENGINE.md  CMakeLists.txt  CMakePresets.json  CODEX_CONTEXT.md  QWEN_FULL_INJECTOR_REVIEW.md  RUN_INSTRUCTIONS.md  docker-compose.yml  main.cpp  package-lock.json  package.json
agents/: adaptive-orchestrator.ts  audio-conditioning.ts  auto-curator.ts  closed-loop-runner.ts  event-dispatcher.ts  lora-manager.ts  lora-trainer.py  node-discovery.ts  notification-bridge.ts  post-processor.py  qc-guard.ts  rate-limiter.ts  revenue-reinvestor.ts  swarm-coordinator.ts  telemetry-bridge.ts  worker-control-plane.py
ai/: AIVideoPipeline.cpp  AIVideoPipeline.h  CMakeLists.txt  job_queue.h
ai_prompt/: CMakeLists.txt
api/: CMakeLists.txt
api/include/EchoesEngine/api/: ApiServer.h  GenerateModels.h  Http.h  JobRegistry.h  Router.h
api/src/: ApiServer.cpp  GenerateModels.cpp  Http.cpp  JobRegistry.cpp  Router.cpp
audio/: CMakeLists.txt
build-nmake/: CMakeCache.txt  EchoesEngine.ilk  EchoesEngine.lib  Makefile  cmake_install.cmake
export/: CMakeLists.txt
export/include/EchoesEngine/export/: ExportJob.h  FFmpegPlan.h  FrameCapture.h  VideoExporter.h
export/src/: ExportJob.cpp  FFmpegPlan.cpp  FrameCapture.cpp  VideoExporter.cpp
platform/: CMakeLists.txt
platform/include/EchoesEngine/platform/: AutonomousPlatform.h
platform/src/: AutonomousPlatform.cpp
render/: CMakeLists.txt  FrameBuffer.h  LightingEngine.cpp  LightingEngine.h  ParticleSystem.cpp  ParticleSystem.h  RenderDevice.cpp  RenderDevice.h  RenderPipeline.cpp  RenderPipeline.h  SceneRenderer.cpp  SceneRenderer.h  ShaderManager.cpp  ShaderManager.h
(+689 files in other folders)
